feat: save userdata -> isar

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -68,5 +68,7 @@
     "health": "Health",
     "movie": "Movie",
     "home": "Home"
-  }
+  },
+  "id": "ID: $id",
+  "showUsername": "@$username"
 }
